fix(a11y): fix contrast of disabled buttons of high contrast & dark mode

--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@
 	--event-width: 100vw;
 }
 
+@media (prefers-contrast: more) {
+	:root {
+		--disabled-button-color: #000;
+	}
+}
+
 @supports not ((backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px))) {
 	:root {
 		--translucent-background-color: #FFFC;
@@ -58,6 +64,7 @@
 
 	@media (prefers-contrast: more) {
 		:root {
+			--disabled-button-color: #FFF;
 			--border-color: #FFF;
 		}
 	}
@@ -65,7 +72,6 @@
 
 @media (prefers-contrast: more) {
 	:root {
-		--disabled-button-color: #000;
 		--translucent-background-color: var(--background-color);
 	}
 }
